tests/ui/pattern/usefulness/issue-31221.stderr
error: unreachable pattern
  --> $DIR/issue-31221.rs:18:9
   |
LL |         Var3 => (),
   |         ---- matches any value
LL |         Var2 => (),
   |         ^^^^ unreachable pattern
   |
note: the lint level is defined here
  --> $DIR/issue-31221.rs:4:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/issue-31221.rs:24:9
   |
LL |         &Var3 => (),
   |         ----- matches any value
LL |         &Var2 => (),
   |         ^^^^^ unreachable pattern

error: unreachable pattern
  --> $DIR/issue-31221.rs:31:9
   |
LL |         anything => ()
   |         ^^^^^^^^ unreachable pattern
   |
note: these patterns collectively make the last one unreachable
  --> $DIR/issue-31221.rs:31:9
   |
LL |         (Var1, b) => (),
   |         --------- matches some of the same values
LL |         (c, d) => (),
   |         ------ matches some of the same values
LL |         anything => ()
   |         ^^^^^^^^ collectively making this unreachable

error: aborting due to 3 previous errors

